--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
+  background-color: #DE3B1B;
   text-align: center;
   margin: 0;
   padding: 0;
@@ -24,3 +24,4 @@ footer {
   width: 100%;
   bottom: 0;
 }
+
