--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #DE3B1B;
+  background-color: #4CAF50;
   text-align: center;
   margin: 0;
   padding: 0;
@@ -24,4 +24,5 @@ footer {
   width: 100%;
   bottom: 0;
 }
+
 
